packages/fb_connector/lib/src/ffi/fb_bindings.dart


  late final _isc_dsql_execute_mPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<isc_stmt_handle>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>)>>('isc_dsql_execute_m');
  late final _isc_dsql_execute_m = _isc_dsql_execute_mPtr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<isc_stmt_handle>,
          int,
          ffi.Pointer<ISC_SCHAR>,
          int,
          int,
          ffi.Pointer<ISC_SCHAR>)>();

  int isc_dsql_execute2_m(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
    ffi.Pointer<isc_stmt_handle> arg2,
    int arg3,
    ffi.Pointer<ISC_SCHAR> arg4,
    int arg5,
    int arg6,
    ffi.Pointer<ISC_SCHAR> arg7,
    int arg8,
    ffi.Pointer<ISC_SCHAR> arg9,
    int arg10,
    int arg11,
    ffi.Pointer<ISC_SCHAR> arg12,
  ) {
    return _isc_dsql_execute2_m(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
      arg7,
      arg8,
      arg9,
      arg10,
      arg11,
      arg12,
    );
  }

  late final _isc_dsql_execute2_mPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<isc_stmt_handle>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>)>>('isc_dsql_execute2_m');
  late final _isc_dsql_execute2_m = _isc_dsql_execute2_mPtr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<isc_stmt_handle>,
          int,
          ffi.Pointer<ISC_SCHAR>,
          int,
          int,
          ffi.Pointer<ISC_SCHAR>,
          int,
          ffi.Pointer<ISC_SCHAR>,
          int,
          int,
          ffi.Pointer<ISC_SCHAR>)>();

  int isc_dsql_execute_immediate_m(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_tr_handle> arg2,
    int arg3,
    ffi.Pointer<ISC_SCHAR> arg4,
    int arg5,
    int arg6,
    ffi.Pointer<ISC_SCHAR> arg7,
    int arg8,
    int arg9,
    ffi.Pointer<ISC_SCHAR> arg10,
  ) {
    return _isc_dsql_execute_immediate_m(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
      arg7,
      arg8,
      arg9,
      arg10,
    );
  }

  late final _isc_dsql_execute_immediate_mPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>)>>('isc_dsql_execute_immediate_m');
  late final _isc_dsql_execute_immediate_m =
      _isc_dsql_execute_immediate_mPtr.asFunction<
          int Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              int,
              ffi.Pointer<ISC_SCHAR>,
              int,
              int,
              ffi.Pointer<ISC_SCHAR>,
              int,
              int,
              ffi.Pointer<ISC_SCHAR>)>();

  int isc_dsql_exec_immed3_m(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_tr_handle> arg2,
    int arg3,
    ffi.Pointer<ISC_SCHAR> arg4,
    int arg5,
    int arg6,
    ffi.Pointer<ISC_SCHAR> arg7,
    int arg8,
    int arg9,
    ffi.Pointer<ISC_SCHAR> arg10,
    int arg11,
    ffi.Pointer<ISC_SCHAR> arg12,
    int arg13,
    int arg14,
    ffi.Pointer<ISC_SCHAR> arg15,
  ) {
    return _isc_dsql_exec_immed3_m(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
      arg7,
      arg8,
      arg9,
      arg10,
      arg11,
      arg12,
      arg13,
      arg14,
      arg15,
    );
  }

  late final _isc_dsql_exec_immed3_mPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>)>>('isc_dsql_exec_immed3_m');
  late final _isc_dsql_exec_immed3_m = _isc_dsql_exec_immed3_mPtr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_db_handle>,
          ffi.Pointer<isc_tr_handle>,
          int,
          ffi.Pointer<ISC_SCHAR>,
          int,
          int,
          ffi.Pointer<ISC_SCHAR>,
          int,
          int,
          ffi.Pointer<ISC_SCHAR>,
          int,
          ffi.Pointer<ISC_SCHAR>,
          int,
          int,
          ffi.Pointer<ISC_SCHAR>)>();

  int isc_dsql_fetch_m(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_stmt_handle> arg1,
    int arg2,
    ffi.Pointer<ISC_SCHAR> arg3,
    int arg4,
    int arg5,
    ffi.Pointer<ISC_SCHAR> arg6,
  ) {
    return _isc_dsql_fetch_m(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
    );
  }

  late final _isc_dsql_fetch_mPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_stmt_handle>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>)>>('isc_dsql_fetch_m');
  late final _isc_dsql_fetch_m = _isc_dsql_fetch_mPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_stmt_handle>, int,
          ffi.Pointer<ISC_SCHAR>, int, int, ffi.Pointer<ISC_SCHAR>)>();

  int isc_dsql_insert_m(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_stmt_handle> arg1,
    int arg2,
    ffi.Pointer<ISC_SCHAR> arg3,
    int arg4,
    int arg5,
    ffi.Pointer<ISC_SCHAR> arg6,
  ) {
    return _isc_dsql_insert_m(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
    );
  }

  late final _isc_dsql_insert_mPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_stmt_handle>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>)>>('isc_dsql_insert_m');
  late final _isc_dsql_insert_m = _isc_dsql_insert_mPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_stmt_handle>, int,
          ffi.Pointer<ISC_SCHAR>, int, int, ffi.Pointer<ISC_SCHAR>)>();

  int isc_dsql_prepare_m(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
    ffi.Pointer<isc_stmt_handle> arg2,
    int arg3,
    ffi.Pointer<ISC_SCHAR> arg4,
    int arg5,
    int arg6,
    ffi.Pointer<ISC_SCHAR> arg7,
    int arg8,
    ffi.Pointer<ISC_SCHAR> arg9,
  ) {
    return _isc_dsql_prepare_m(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
      arg7,
      arg8,
      arg9,
    );
  }

  late final _isc_dsql_prepare_mPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<isc_stmt_handle>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>)>>('isc_dsql_prepare_m');
  late final _isc_dsql_prepare_m = _isc_dsql_prepare_mPtr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<isc_stmt_handle>,
          int,
          ffi.Pointer<ISC_SCHAR>,
          int,
          int,
          ffi.Pointer<ISC_SCHAR>,
          int,
          ffi.Pointer<ISC_SCHAR>)>();

  int isc_dsql_release(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<ISC_SCHAR> arg1,
  ) {
    return _isc_dsql_release(
      arg0,
      arg1,
    );
  }

  late final _isc_dsql_releasePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<ISC_SCHAR>)>>('isc_dsql_release');
  late final _isc_dsql_release = _isc_dsql_releasePtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>)>();

  int isc_embed_dsql_close(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<ISC_SCHAR> arg1,
  ) {
    return _isc_embed_dsql_close(
      arg0,
      arg1,
    );
  }

  late final _isc_embed_dsql_closePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<ISC_SCHAR>)>>('isc_embed_dsql_close');
  late final _isc_embed_dsql_close = _isc_embed_dsql_closePtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>)>();

  int isc_embed_dsql_declare(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<ISC_SCHAR> arg1,
    ffi.Pointer<ISC_SCHAR> arg2,
  ) {
    return _isc_embed_dsql_declare(
      arg0,
      arg1,
      arg2,
    );
  }

  late final _isc_embed_dsql_declarePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>,
              ffi.Pointer<ISC_SCHAR>)>>('isc_embed_dsql_declare');
  late final _isc_embed_dsql_declare = _isc_embed_dsql_declarePtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>,
          ffi.Pointer<ISC_SCHAR>)>();

  int isc_embed_dsql_describe(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<ISC_SCHAR> arg1,
    int arg2,
    ffi.Pointer<XSQLDA> arg3,
  ) {
    return _isc_embed_dsql_describe(
      arg0,
      arg1,
      arg2,
      arg3,
    );
  }

  late final _isc_embed_dsql_describePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16, ffi.Pointer<XSQLDA>)>>('isc_embed_dsql_describe');
  late final _isc_embed_dsql_describe = _isc_embed_dsql_describePtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>, int,
          ffi.Pointer<XSQLDA>)>();

  int isc_embed_dsql_describe_bind(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<ISC_SCHAR> arg1,
    int arg2,
    ffi.Pointer<XSQLDA> arg3,
  ) {
    return _isc_embed_dsql_describe_bind(
      arg0,
      arg1,
      arg2,
      arg3,
    );
  }

  late final _isc_embed_dsql_describe_bindPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Pointer<XSQLDA>)>>('isc_embed_dsql_describe_bind');
  late final _isc_embed_dsql_describe_bind =
      _isc_embed_dsql_describe_bindPtr.asFunction<
          int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>, int,
              ffi.Pointer<XSQLDA>)>();
